# scope

./: .clang-format  CMakeLists.txt  README.md  main.cpp
Public/Scope/: Scope.h  UniqueResource.h
Public/Scope/Details/: BaseUniqueResource.h  Policy.h  ResourceBox.h  ScopeBox.h  ScopeGuard.h  Traits.h
tests/: Scope.cpp  UniqueResource.cpp
